<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fad_margin">

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:gravity="center"
        android:text="@string/skip"
        android:textColor="@color/black6"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/fad_margin"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:rotation="-20"
            android:src="@drawable/vector_lucky_air_ship"/>

        <FrameLayout
            android:id="@+id/fl_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="28dp">

            <EditText
                android:id="@+id/et_account"
                style="@style/DefaultTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:hint="@string/input_account"
                android:inputType="text"
                android:textColor="@color/black3"
                android:textColorHint="@color/blackC"
                android:textCursorDrawable="@drawable/shape_cursor_red"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/iv_account_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:src="@drawable/ic_cancel"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:background="@color/dividing"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/et_pwd"
                style="@style/DefaultTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:textColor="@color/black3"
                android:textColorHint="@color/blackC"
                android:textCursorDrawable="@drawable/shape_cursor_red"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/iv_pwd_clear"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_cancel"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:background="@color/dividing"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="@dimen/fad_margin">

            <TextView
                android:id="@+id/tv_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/forget_password"
                android:textColor="@color/black6"
                android:textSize="14sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/register"
                android:textColor="@color/black6"
                android:textSize="14sp"/>

        </FrameLayout>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/selector_btn_status"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>
